[package]
name = "rolling-dual-crc"
version = "0.1.0"
license = "MIT"
description = "Rolling CRC with 32-bit CRC32C and 64-bit CRC64/XZ"
repository = "https://github.com/malaire/rolling-dual-crc"
keywords = [ "checksum", "crc", "crc32", "crc64", "rolling" ]
categories = [ "algorithms" ]
edition = "2021"

include = [
    "/benches",
    "/src",
    "LICENSE",
    "README.md",
    "build.rs",
]

[features]
fast = [ "crc32c", "crc64fast" ]

[dependencies]
crc32c = { version = "0.6.0", optional = true }
crc64fast = { version = "1.0.0", optional = true }

[build-dependencies]
regex = "1.5.4"

[dev-dependencies]
criterion = { version = "0.3", features = [ "html_reports" ] }

[lib]
bench = false

[[bench]]
name = "benchmarks"
harness = false
